# claweb

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  action_executor.py  agent.py  browser.py  config.py  database.py  explorer.py  llm_client.py  main.py  models.py  page_tagger.py  pyproject.toml  requirements.txt  test_explorer.py
src/claweb/: __init__.py  cli.py
src/claweb/core/: __init__.py  agent.py  browser.py  config.py
src/claweb/executor/: __init__.py  action_executor.py
src/claweb/explorer/: __init__.py  explorer.py
src/claweb/llm/: __init__.py  client.py
src/claweb/storage/: __init__.py  database.py  models.py
src/claweb/tagger/: __init__.py  page_tagger.py
tests/: __init__.py  test_agent.py  test_models.py
